correct portfolio cards list gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ body {
 .feature {
   padding: 120px 0;
 }
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -193,12 +194,9 @@ body {
 }
 .feature-item {
   width: 264px;
-  margin-right: 24px;
+  gap: 24px;
 }
 
-.feature-item:last-child {
-  margin-right: 0;
-}
 
 /**
   |============================
@@ -224,10 +222,6 @@ body {
   display: flex;
   gap: 24px;
 }
-
-/* .action-item {
-  margin-right: 24px;
-} */
 
 /**
   |============================
